# gridtest-rs

./: Cargo.toml
src/: entity.rs  game.rs  main.rs  tile.rs  tiles.rs  util.rs  world.rs
src/entity/: player.rs
src/tile/: air.rs  base.rs  player.rs
src/tiles/: base.rs  mod.rs  player.rs
