[package]
name = "gridtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25"
strum_macros = "0.25"
rand = { version = "0.8.5", features = [] }
minifb = "*"
raqote = "*"
font-kit = "*"
clap = { version = "4.4.7", features = ["derive"] }